# EnronPersonalizationValidation

./: BUILD.bazel  README.md  WORKSPACE.bazel
metadata/dev/: dev01.message.info.tsv  dev02.message.info.tsv  dev03.message.info.tsv  dev04.message.info.tsv  dev05.message.info.tsv  dev06.message.info.tsv  dev07.message.info.tsv  dev08.message.info.tsv  dev09.message.info.tsv  dev10.message.info.tsv  dev11.message.info.tsv  dev12.message.info.tsv  dev13.message.info.tsv  dev14.message.info.tsv  dev15.message.info.tsv  dev16.message.info.tsv  dev17.message.info.tsv  dev18.message.info.tsv  dev19.message.info.tsv  dev20.message.info.tsv  dev21.message.info.tsv  dev22.message.info.tsv  dev23.message.info.tsv  dev24.message.info.tsv  dev25.message.info.tsv  dev26.message.info.tsv  dev27.message.info.tsv  dev28.message.info.tsv  dev29.message.info.tsv  dev30.message.info.tsv  dev31.message.info.tsv  dev32.message.info.tsv  dev33.message.info.tsv  dev34.message.info.tsv  dev35.message.info.tsv  dev36.message.info.tsv  dev37.message.info.tsv  dev38.message.info.tsv  dev39.message.info.tsv  dev40.message.info.tsv  (+5 more)
metadata/test/: tst01.message.info.tsv  tst02.message.info.tsv  tst03.message.info.tsv  tst04.message.info.tsv  tst05.message.info.tsv  tst06.message.info.tsv  tst07.message.info.tsv  tst08.message.info.tsv  tst09.message.info.tsv  tst10.message.info.tsv  tst11.message.info.tsv  tst12.message.info.tsv  tst13.message.info.tsv  tst14.message.info.tsv  tst15.message.info.tsv  tst16.message.info.tsv  tst17.message.info.tsv  tst18.message.info.tsv  tst19.message.info.tsv  tst20.message.info.tsv  tst21.message.info.tsv  tst22.message.info.tsv  tst23.message.info.tsv  tst24.message.info.tsv  tst25.message.info.tsv  tst26.message.info.tsv  tst27.message.info.tsv  tst28.message.info.tsv  (+16 more)
(+89 files in other folders)
