# Bazel rules for this dataset.

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "metadata_dev_files",
    srcs = glob(["metadata/dev/dev*.info.tsv"]),
)

filegroup(
    name = "metadata_test_files",
    srcs = glob(["metadata/test/tst*.info.tsv"]),
)

filegroup(
    name = "text_dev_files",
    srcs = glob(["text/dev/dev*.text.tsv"]),
)

filegroup(
    name = "text_test_files",
    srcs = glob(["text/test/tst*.text.tsv"]),
)

filegroup(
    name = "all_files",
    srcs = glob(["**/*.tsv"]),
)
